--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -37,9 +37,35 @@
 		    <input type="text" class="form-control input-lg" id="avatar-name-input" placeholder="John Doe" ng-model="main.currentAvatar.name" required autofocus="true">
 		  </div>
 		  <div class="form-group form-section">
-				<input type="submit" class="btn btn-primary btn-block btn-lg" value="I'm Done">
+				<button type="button" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#myModal" ng-click="main.clearNew()">I'm Done</button>
 		  </div>
 		</div>
 		<div class="clearfix"></div>
 	</form>
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog modal-lg" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Preview Family</h4>
+	      </div>
+	      <div class="modal-body family">
+	        <div class="container-fluid">
+	        	<div class="row">
+	        		<div class="col-md-2" ng-repeat="value in main.results | limitTo:main.totalAvatars">
+	        			<div class="graphic">
+	        			<img class="img" ng-repeat="value in main.currentAvatar.images" ng-src="{{main.imageUrls[value].location}}">
+	        			</div>
+	        		</div>
+	        	</div>
+	        </div>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 </div>
