--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,7 +100,9 @@ body {
 
 .img {
   position: absolute;
-  width: 100%; }
+  width: 100%;
+  left: 0;
+  top: 0; }
 
 #user-id-input {
   width: 260px; }
@@ -129,8 +131,8 @@ body {
 
 .graphic {
   width: 100%;
-  border: 1px solid black;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  position: relative; }
 
-.family {
-  min-height: 500px; }
+.transparency {
+  width: 100%; }
