added flexbox to gallery

--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -119,3 +119,9 @@ body {
 .transparency {
   width: 100%;
 }
+
+.container-fluid > .row {
+  display: flex !important;
+  justify-content: center;
+  flex-wrap: wrap;
+}
