--- a/public/css/main.css
+++ b/public/css/main.css
@@ -136,3 +136,16 @@ body {
 
 .transparency {
   width: 100%; }
+
+.container-fluid > .row {
+  display: -webkit-box !important;
+  display: -webkit-flex !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
