fixed a silly typo. Added label to preview galery

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -58,6 +58,7 @@
 	        			<img class="transparency" src="img/transparency.png">
 	        			<img class="img" ng-repeat="image in value.images" ng-src="{{main.imageUrls[image].location}}">
 	        			</div>
+	        			<h4 class="preview-label">{{value.name}}</h4>
 	        		</div>
 	        	</div>
 	        </div>
