--- a/public/css/main.css
+++ b/public/css/main.css
@@ -149,3 +149,6 @@ body {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
+
+.preview-label {
+  text-align: center; }
