--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -65,7 +65,7 @@
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
+	        <button type="button" class="btn btn-primary" ng-click="main.submitPreview()">Save changes</button>
 	      </div>
 	    </div>
 	  </div>
