--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,35 +3,6 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
-.wrapper {
-  max-width: 840px;
-  margin-left: auto;
-  margin-right: auto; }
-  .wrapper:after {
-    content: " ";
-    display: block;
-    clear: both; }
-
-.container {
-  position: relative;
-  margin: 0 auto;
-  max-width: 1020px;
-  -webkit-transform-origin: 50% 0%;
-      -ms-transform-origin: 50% 0%;
-          transform-origin: 50% 0%; }
-
-@media screen and (min-width: 568px) and (max-width: 768px) {
-  .container {
-    margin: 0 auto;
-    max-width: 559px; } }
-
-@media screen and (max-width: 567px) {
-  .container {
-    margin: 0 auto;
-    width: 320px;
-    padding: 6px;
-    padding-bottom: 45px; } }
-
 body {
   -webkit-tap-highlight-color: transparent;
   padding: 0;
@@ -152,3 +123,6 @@ body {
 
 .preview-label {
   text-align: center; }
+
+.flipbook {
+  margin: 0 auto; }
