--- a/public/partials/preview.html
+++ b/public/partials/preview.html
@@ -2,6 +2,19 @@
 
 <h3>Folder Name: {{preview.folderName}}</h3>
 
-<img ng-src="{{'http://178.62.255.163:3000/preview' + '/' + preview.folderName + '/' + ($index + 1) + '.PNG'}}" src="" ng-repeat="image in preview.imageList(preview.numberOfImages) track by $index">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="flipbook">
+        <img ng-src="{{'http://178.62.255.163:3000/preview' + '/' + preview.folderName + '/' + ($index + 1) + '.PNG'}}" src="" ng-repeat="image in preview.imageList(preview.numberOfImages) track by $index" ng-init="$last && preview.finished()">
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+
+</script>
+
 
 <!-- <div ng-repeat="image in preview.imageList(vm.numberOfImages) track by $index">test</div> -->
