removed user id field

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -2,10 +2,10 @@
   <form ng-submit="main.postPerson()" id="avatarForm">
 		<div class="left-column" ng-show="main.isLoaded">
 
-		  <div class="form-group form-section">
+<!-- 		  <div class="form-group form-section">
 		    <label for="user-id-input" class="form-section-heading">User ID</label>
 		    <input type="text" class="form-control input-lg" id="user-id-input" placeholder="user001" ng-model="main.currentUser" required>
-		  </div>
+		  </div> -->
 		  <p>Current Avatar: {{main.currentAvatarIndex}}</p>
 		  <p>Error: {{main.error}}</p>
 		  <p>Total Avatars: {{main.totalAvatars}}</p>
