--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -6,6 +6,12 @@
 		    <label for="user-id-input" class="form-section-heading">User ID</label>
 		    <input type="text" class="form-control input-lg" id="user-id-input" placeholder="user001" ng-model="main.currentUser" required>
 		  </div> -->
+		  <p ng-if="!main.currentUserProfile">You are not logged in, log in now with <a href="http://localhost:3000/auth">PayPal</a></p>
+		  <div ng-if="main.currentUserProfile">
+		  	<p>Logged in as:</p>
+		  	<p>Name: {{main.currentUserProfile.name}}</p>
+		  	<p>Email: {{main.currentUserProfile.email}}</p>
+		  </div>
 		  <p>Current Avatar: {{main.currentAvatarIndex}}</p>
 		  <p>Error: {{main.error}}</p>
 		  <p>Total Avatars: {{main.totalAvatars}}</p>
