--- a/public/scss/containers.scss
+++ b/public/scss/containers.scss
@@ -2,12 +2,18 @@
 // 	@include container(840px);
 // }
 
-// .container {
-// 	position: relative;
-// 	margin: 0 auto;
-// 	max-width: 1020px;
-// 	transform-origin: 50% 0%;
-// }
+.container {
+    position: relative;
+    margin: 0 auto;
+    max-width: 1000px;
+    padding:0 20px;
+    width:100%;
+    -moz-transform-origin: 50% 0;
+    -ms-transform-origin: 50% 0;
+    -o-transform-origin: 50% 0;
+    -webkit-transform-origin: 50% 0;
+    transform-origin: 50% 0;
+}
 
 // // Tablet and Sideways Phone
 // @media screen and (min-width: 568px) and (max-width: 768px) {
