--- a/public/scss/fixes.scss
+++ b/public/scss/fixes.scss
@@ -5,8 +5,10 @@ body {
 }
 
 * {
-	padding-top: 0.1px; /* collapsing margins fix */
-  box-sizing: border-box;
+    padding-top: 0.1px; /* collapsing margins fix */
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .clearfix {
