attempting to debug url(30000 ) ;

--- a/public/partials/preview.html
+++ b/public/partials/preview.html
@@ -1,4 +1,4 @@
-<h1 ng-if="!preview.receipt">Preview Pending...</h1>
+<h1 ng-if="!preview.receipt">Preview Pending2...</h1>
 
 <h3 ng-if="!preview.receipt">Folder Name: {{preview.folderName}}</h3>
 
