--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,10 +106,10 @@ body {
     font-size: 60px; }
 
 .arrow-left {
-  left: 0px; }
+  left: 0; }
 
 .arrow-right {
-  right: 0px; }
+  right: 0; }
 
 .graphic {
   width: 100%;
@@ -140,26 +140,36 @@ body {
 
 /*our css*/
 ::-webkit-input-placeholder {
-  opacity: 1 !important; }
+  color: #c1c6c6; }
 
 ::-moz-placeholder {
-  opacity: 1 !important; }
+  color: #c1c6c6; }
 
 :-ms-input-placeholder {
-  opacity: 1 !important; }
+  color: #c1c6c6; }
 
 :-moz-placeholder {
-  opacity: 1 !important; }
+  color: #c1c6c6; }
 
 .clear-fix {
   clear: both; }
 
+a {
+  color: #30a6c3; }
+
+a:hover, a:focus {
+  color: #30a6c3;
+  opacity: 0.8; }
+
 #creationTool {
-  overflow: hidden; }
+  overflow: hidden;
+  margin-top: 30px; }
 
 #topPartWrapper {
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  margin-bottom: 30px;
+  text-align: center; }
 
 #topPartWrapper > input {
   border: 1px solid #30a6c3;
@@ -167,61 +177,519 @@ body {
   font-weight: 700;
   margin: 0 auto;
   text-align: center;
-  width: 56.2%; }
+  width: 56.2%;
+  font-size: 22px; }
 
 #topPartWrapper > a {
   position: absolute;
-  right: 20px; }
-
-.character-wrapper {
-  overflow: hidden; }
+  right: 20px;
+  top: 10px; }
 
 #tabs, #slider {
-  float: left;
-  overflow: hidden;
-  width: 50%; }
+  float: left; }
+
+#tabs {
+  width: 470px; }
 
 #tabs > ul, #tabs > .tab-pane {
   float: left;
   width: 80%; }
 
 #tabs > ul {
-  width: 20%;
+  width: 132px;
   margin: 0;
-  padding: 0; }
+  padding: 30px 0 0 0; }
+
+#tabs li {
+  background-color: #e1e8ea;
+  text-align: center;
+  padding: 24px 5px;
+  margin: 6px 6px 6px 0; }
+
+#tabs li.active {
+  background-color: #eff5f7;
+  margin: 0;
+  padding-right: 11px; }
+
+#tabs li a {
+  color: #595e5f;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600; }
+
+#tabs li.active a {
+  font-weight: 700;
+  color: #30a6c3; }
+
+a:hover, a:focus {
+  text-decoration: none; }
 
 #tabs .tab-pane {
-  width: 80%; }
+  width: 338px;
+  background-color: #eff5f7;
+  min-height: 500px;
+  padding: 0 20px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px; }
 
 #tabs > .tab-pane.active {
   display: block; }
 
+#tabs .tab-pane h3 {
+  margin: 20px 0 10px 0;
+  padding: 0;
+  color: #595e5f;
+  font-weight: 700;
+  font-size: 12px;
+  text-transform: uppercase; }
+
+#nameGender > .select-css {
+  overflow: hidden;
+  width: 100%;
+  background: #fff url("/img/down_arrow.png") no-repeat scroll 95% center;
+  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14); }
+
+#tabs .tab-pane select, #tabs .tab-pane input {
+  color: #30a6c3;
+  font-weight: 400;
+  font-size: 18px;
+  border: 0; }
+
+#tabs .tab-pane select {
+  /*padding: 16px 20px;*/
+  width: 113%;
+  background: transparent none repeat scroll 0 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 58px;
+  line-height: 58px;
+  /*text-indent: 20px;*/
+  padding-left: 20px; }
+
+@-moz-document url-prefix() {
+  select {
+    /*text-indent: 8px !important;*/ } }
+
+#tabs .tab-pane select option {
+  text-indent: 17px; }
+
+#tabs .tab-pane input {
+  width: 100%;
+  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.14); }
+
 #tabs > .tab-pane.ng-scope {
   display: none; }
 
-.bottom-btn {
-  display: inline-block; }
+#tabs .tab-pane label input {
+  display: none; }
 
-.avatar-selection {
-  overflow: hidden; }
+#tabs .tab-pane label {
+  width: 142px;
+  height: 142px;
+  background-color: #fff;
+  cursor: pointer;
+  margin: 0 0 14px 0;
+  line-height: 142px;
+  overflow: hidden;
+  text-align: center; }
 
-.avatar-selection > li {
+#tabs .tab-pane label:nth-child(2n) {
   float: left; }
+
+#tabs .tab-pane label:nth-child(2n+1) {
+  float: right; }
+
+#tabs .tab-pane label img {
+  max-width: 100%;
+  margin: 0 auto;
+  max-height: 142px; }
+
+#tabs .bottom-btn {
+  background-color: #eff5f7;
+  border: 1px solid #30a6c3;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  display: inline-block;
+  padding: 12px 5px;
+  text-align: center;
+  /*width: 48%;*/
+  width: 35%;
+  margin-left: 2%;
+  float: right;
+  font-size: 17px;
+  font-weight: 600; }
+
+/*.bottom-btn:last-of-type {
+    float: right;
+}*/
+@media (max-width: 990px) {
+  #tabs .bottom-btn {
+    width: 34%; } }
 
 ul {
   list-style: none; }
 
-#bottomPartWrapper {
-  border-top: 1px solid #30a6c3; }
-
-.steps-menu {
-  overflow: hidden; }
-
-.steps-menu > li {
-  float: left; }
-
-#bottomPartWrapper .col-md-4 a {
-  display: block; }
-
 #tabs .ng-pristine.ng-untouched.ng-valid.ng-scope.ng-not-empty > input[type="radio"] {
   display: none; }
+
+input {
+  padding: 16px 20px; }
+
+input#avatar-name-input {
+  padding: 16px 46px 16px 20px; }
+
+.q-circle {
+  width: 45px;
+  height: 45px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  font-size: 32px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 45px;
+  text-align: center;
+  background: #30a6c3; }
+
+.q-circle.small {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  display: inline-block; }
+
+#tabs .tab-pane .q-circle.small {
+  /*margin-top: 14px;
+    position: absolute;
+    right: 32px;*/
+  position: relative;
+  float: right;
+  right: 10px;
+  top: -43px; }
+
+.q-circle:hover, .q-circle:focus, .q-circle-sm:hover, q-circle-sm:focus {
+  text-decoration: none;
+  color: #fff;
+  opacity: 0.8; }
+
+.error-msg {
+  background-color: #f8eaee;
+  border: 2px solid #e0194d;
+  color: #dca9b7;
+  margin: 16px 0 0;
+  padding: 16px;
+  position: absolute;
+  width: 88%;
+  z-index: 1000; }
+
+.error-msg:after, .error-msg:before,
+.error-msg::after, .error-msg::before {
+  bottom: 100%;
+  left: 90%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none; }
+
+.error-msg:after, .error-msg::after {
+  border-color: rgba(248, 234, 238, 0);
+  border-bottom-color: #f8eaee;
+  border-width: 10px;
+  margin-left: -10px; }
+
+.error-msg:before, .error-msg::before {
+  border-color: rgba(224, 25, 77, 0);
+  border-bottom-color: #e0194d;
+  border-width: 13px;
+  margin-left: -13px; }
+
+/*SLIDER*/
+#slider {
+  position: relative;
+  margin-left: 20px;
+  width: 430px; }
+
+#slider .ng-scope img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto; }
+
+#slider .ng-scope img:first-child {
+  position: relative; }
+
+#slider ul {
+  padding: 0; }
+
+#slider .q-circle.big {
+  font-size: 67px;
+  height: 70px;
+  left: 0;
+  line-height: 70px;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: 20%;
+  width: 70px; }
+
+#slider .new-char-txt {
+  color: #30a6c3;
+  font-size: 26px;
+  font-weight: 400;
+  left: 0;
+  line-height: 30px;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  text-transform: uppercase;
+  top: 39%;
+  width: 78%; }
+
+#slider img {
+  left: 0;
+  position: absolute;
+  top: 0; }
+
+#slider #avatar-name-input {
+  border: 1px solid #30a6c3;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  color: #30a6c3;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: center;
+  padding: 16px 20px;
+  width: 100%; }
+
+.avatar-selection {
+  overflow: hidden;
+  width: 100%;
+  max-width: 430px; }
+
+.avatar-selection > li {
+  float: left;
+  width: 80%; }
+
+.avatar-selection > li:first-child {
+  width: 10%; }
+
+.avatar-selection > li:last-child {
+  width: 10%;
+  text-align: right; }
+
+#slider .prev-btn, #slider .next-btn {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  top: 15px;
+  width: 20px; }
+
+#slider .next-btn {
+  background: url(/img/right_arrow.png) no-repeat center; }
+
+#slider .next-btn.inactive {
+  background: url(/img/right_arrow_inactive.png) no-repeat center;
+  cursor: not-allowed; }
+
+#slider .prev-btn {
+  background: url(/img/left_arrow.png) no-repeat center; }
+
+#slider .prev-btn.inactive {
+  background: url(/img/left_arrow_inactive.png) no-repeat center;
+  cursor: not-allowed; }
+
+@media (max-width: 1000px) {
+  #topPartWrapper {
+    text-align: left; }
+  #topPartWrapper > input {
+    font-size: 18px;
+    width: 80%; }
+  #tabs {
+    width: 47%; }
+  #tabs > ul {
+    width: 30%; }
+  #tabs .tab-pane {
+    width: 70%; }
+  #slider {
+    margin-left: 2%;
+    width: 43%; }
+  #tabs .tab-pane label {
+    width: 49%;
+    height: auto; }
+  .error-msg {
+    left: 0;
+    right: 0;
+    width: 85.5%;
+    margin-left: auto;
+    margin-right: auto; } }
+
+@media (max-width: 765px) {
+  #tabs {
+    width: 100%;
+    float: none;
+    max-width: 410px;
+    margin: 0 auto 30px auto; }
+  #tabs > ul {
+    width: 30%; }
+  #tabs .tab-pane {
+    width: 70%; }
+  #slider {
+    margin-left: 0;
+    width: 100%;
+    float: none;
+    max-width: 410px;
+    margin: 0 auto 30px auto; } }
+
+@media (max-width: 390px) {
+  .error-msg {
+    width: 77%; }
+  #topPartWrapper > input {
+    font-size: 15px; }
+  #tabs .tab-pane select, #tabs .tab-pane input {
+    font-size: 15px; }
+  input#avatar-name-input {
+    padding-left: 10px; }
+  #tabs .tab-pane select {
+    padding: 16px 10px; } }
+
+@media (max-width: 390px) {
+  #tabs .bottom-btn {
+    width: 48%;
+    margin: 1%; } }
+
+/*bottom part*/
+#bottomPartWrapper {
+  border-top: 1px solid #30a6c3;
+  margin: 20px 0 15px 0; }
+
+.steps-menu {
+  overflow: hidden;
+  display: block;
+  margin-top: 10px;
+  padding: 0; }
+
+.steps-menu > li {
+  float: left;
+  width: 25%; }
+
+.steps-menu > li span {
+  display: block; }
+
+.steps-menu > li .avatar-label {
+  color: #e1e8ea;
+  font-size: 12px;
+  font-weight: 700;
+  position: relative;
+  top: 10px; }
+
+.steps-menu > li.active .avatar-label {
+  color: #30a6c3;
+  top: 0; }
+
+.steps-menu > li .circle {
+  width: 20px;
+  height: 20px;
+  background-color: #e1e8ea;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  position: relative;
+  top: 5px;
+  z-index: 200; }
+
+.steps-menu > li.active .circle {
+  width: 30px;
+  height: 30px;
+  border: 4px solid #30a6c3;
+  top: 0; }
+
+.steps-menu > li.done .circle {
+  background-color: #30a6c3; }
+
+.steps-menu > li .bar {
+  background-color: #e4e4e4;
+  display: block;
+  height: 2px;
+  position: relative;
+  width: 100%;
+  z-index: 100;
+  top: -6px; }
+
+.steps-menu > li.active .bar {
+  top: -15px; }
+
+.steps-menu > li:last-child .circle {
+  right: 0;
+  position: relative; }
+
+.steps-menu > li:last-child .bar {
+  background-color: transparent; }
+
+.steps-menu > li.done .bar {
+  background-color: #30a6c3; }
+
+#bottomPartWrapper .w-col-md-4 a {
+  display: block;
+  text-align: center; }
+
+#bottomPartWrapper > .container {
+  margin-top: 15px; }
+
+.blue-btn {
+  background-color: #30a6c3;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 600;
+  text-align: center;
+  padding: 16px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px; }
+
+.blue-btn:hover, .blue-btn:focus {
+  color: #fff; }
+
+#bottomPartWrapper .w-col-md-4 {
+  width: 33.3333%;
+  float: left; }
+
+#bottomPartWrapper .w-col-md-4:last-child {
+  text-align: center; }
+
+#bottomPartWrapper .w-col-md-4 a.blue-btn.back-btn {
+  display: inline-block;
+  opacity: 0;
+  background: #30a6c3 url(/img/back_arrow.png) no-repeat 16px center;
+  padding-left: 50px; }
+
+@media (max-width: 600px) {
+  #bottomPartWrapper .w-col-md-4 {
+    width: 50%; }
+  #bottomPartWrapper .w-col-md-4:last-child:before,
+  #bottomPartWrapper .w-col-md-4:last-child::before {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0; }
+  #bottomPartWrapper .w-col-md-4:last-child {
+    width: 100%;
+    float: none;
+    overflow: hidden; }
+  .steps-menu {
+    margin-bottom: 30px; }
+  .steps-menu > li {
+    width: 33.3333%; } }
+
+@media (max-width: 420px) {
+  #bottomPartWrapper .w-col-md-4 {
+    width: 100%;
+    float: none; }
+  .steps-menu {
+    margin-top: 30px; } }
