--- a/public/partials/mainV2.html
+++ b/public/partials/mainV2.html
@@ -57,7 +57,7 @@
                     <a href="javascript:void(0);">man</a>
                 </div>
                 <!-- MGS: The way my selector works currently is thas they clickable choices are actually hidden radio buttons with a styled label which contains a preview image. The buttons themselves can be hidden using css. I wrote a sample repeatable tab to reflect that. If you think that is too difficult to work around, please leave a comment and we can rethink the approach -->
-                <div class="tab-pane" ng-repeat="property in main.schema">
+                <div id="{{property.image_type}}" class="tab-pane" ng-repeat="property in main.schema">
                     <h3>{{property.image_type_label}}</h3>
                     <label ng-repeat="value in property.values" class="" ng-model="main.currentAvatar.images[$parent.$index]">
                         <img height="" ng-src="{{value.image_location}}">
