--- a/public/partials/mainV2.html
+++ b/public/partials/mainV2.html
@@ -26,7 +26,7 @@
                 <ul>
 
                     <!-- MGS: the tab li elements (or whatever element they will get changed to will dynamically repeat based on the information retrieved from the database). I have commented out all but the first LI to demonstrate that -->
-                    <li ng-class="{active: $index == 0}" ng-repeat="property in main.schema"><a ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
+                    <li ng-class="{active: $index == 0}" ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
                     <!--        <li class="active"><a data-toggle="tab" href="#nameGender">NAME & GENDER</a></li>
                                 <li><a href="#skin">SKIN</a></li>
                                 <li><a href="#hair">HAIR</a></li>
