--- a/public/css/main.css
+++ b/public/css/main.css
@@ -211,6 +211,9 @@ a:hover, a:focus {
   margin: 0;
   padding-right: 11px; }
 
+#tabs li.active:first-child {
+  margin-top: 6px; }
+
 #tabs li a {
   color: #595e5f;
   font-size: 14px;
@@ -227,7 +230,7 @@ a:hover, a:focus {
 #tabs .tab-pane-style {
   width: 338px;
   background-color: #eff5f7;
-  min-height: 500px;
+  min-height: 620px;
   padding: 0 20px;
   position: relative;
   overflow: hidden;
