--- a/public/partials/mainV2.html
+++ b/public/partials/mainV2.html
@@ -24,9 +24,10 @@
                 <!-- tabs : this structure might change depending on the tab component used-->
                 <!-- tab menu -->
                 <ul>
+                    <li class="active"><a target="_self" href="#nameGender" data-toggle="tab">Name and Gender</a></li>
 
                     <!-- MGS: the tab li elements (or whatever element they will get changed to will dynamically repeat based on the information retrieved from the database). I have commented out all but the first LI to demonstrate that -->
-                    <li ng-class="{active: $index == 0}" ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
+                    <li ng-repeat="property in main.schema"><a target="_self" ng-href="{{'#' + property.image_type}}" data-toggle="tab">{{property.image_type_label}}</a></li>
                     <!--        <li class="active"><a data-toggle="tab" href="#nameGender">NAME & GENDER</a></li>
                                 <li><a href="#skin">SKIN</a></li>
                                 <li><a href="#hair">HAIR</a></li>
