fixed the label floats, added an outline for selected item

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -300,10 +300,10 @@ a:hover, a:focus {
   overflow: hidden;
   text-align: center; }
 
-#tabs .tab-pane-style label:nth-child(2n) {
+#tabs .tab-pane-style div:nth-child(2n) label {
   float: left; }
 
-#tabs .tab-pane-style label:nth-child(2n+1) {
+#tabs .tab-pane-style div:nth-child(2n+1) label {
   float: right; }
 
 #tabs .tab-pane-style label img {
@@ -669,6 +669,12 @@ input#avatar-name-input {
   opacity: 0;
   background: #30a6c3 url(/img/back_arrow.png) no-repeat 16px center;
   padding-left: 50px; }
+
+input[type="radio"] {
+  display: none; }
+
+input[type="radio"]:checked + label {
+  outline: 3px solid blue; }
 
 @media (max-width: 600px) {
   #bottomPartWrapper .w-col-md-4 {
