hidden error message, removed unnecessary repetition in the slider, removed ng-scope styling to fix the layout problems, removed unneeded comments

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -386,7 +386,8 @@ input#avatar-name-input {
   padding: 16px;
   position: absolute;
   width: 88%;
-  z-index: 1000; }
+  z-index: 1000;
+  display: none; }
 
 .error-msg:after, .error-msg:before,
 .error-msg::after, .error-msg::before {
@@ -417,14 +418,14 @@ input#avatar-name-input {
   margin-left: 20px;
   width: 430px; }
 
-#slider .ng-scope img {
+#slider img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: auto; }
 
-#slider .ng-scope img:first-child {
+#slider img:first-child {
   position: relative; }
 
 #slider ul {
